# HPC-Agentic-SDK

./: CONTRIBUTING.md  README.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: sync-agents.yml
bootstrap/.codex-plugin/: plugin.json
bootstrap/skills/bootstrap/: SKILL.md
gpu-porting/skills/gpu-porting/: SKILL.md
make-vibe/: .mcp.json
make-vibe/.codex-plugin/: plugin.json
make-vibe/skills/make-vibe/: SKILL.md
openacc/.codex-plugin/: plugin.json
openacc/skills/openacc/: SKILL.md
r-ccs-cloud/.codex-plugin/: plugin.json
r-ccs-cloud/plugins/rccs-cloud/.claude-plugin/: plugin.json
r-ccs-cloud/skills/r-ccs-cloud/: SKILL.md
raptor/.codex-plugin/: plugin.json
raptor/skills/raptor/: SKILL.md
rikyu/: .gitignore  .mcp.json  AGENTS.md  IRI_CHECKLIST.md  PORTING.md  README.md
rikyu/.agents/plugins/: marketplace.json
rikyu/data/: ai4s_config.json
rikyu/plugins/rikyu/: .mcp.json
rikyu/server/: pyproject.toml  run.sh
rikyu/server/rikyu_mcp/: compute.py  config.py  docs_server.py  doctor.py  hpc_server.py  middleware.py  models.py
rikyu/server/rikyu_mcp/compute/: slurm.py
rikyu/server/rikyu_mcp/data/: rikyu_config.json
rikyu/server/rikyu_mcp/data/docs_index/: chunks.json  embeddings.npy
rikyu/server/rikyu_mcp/rag/: embed.py  ingest.py  store.py
rikyu/server/tests/: smoke.py
rikyu/skills/ai4s-configuring/: SKILL.md
rikyu/skills/ai4s-monitoring-jobs/: SKILL.md
tadashi/: .mcp.json  mcp.json
tadashi/.codex-plugin/: plugin.json
tadashi/skills/tadashi/: SKILL.md
(+15 files in other folders)
