[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rikyu-mcp"
version = "0.2.19"
description = "MCP servers for the RIKEN Rikyu supercomputer: Slurm interaction and documentation search."
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "remotemanager",
    "httpx",
    "numpy",
]

[project.scripts]
rikyu-hpc-mcp = "rikyu_mcp.hpc_server:main"
rikyu-docs-mcp = "rikyu_mcp.docs_server:main"
rikyu-doctor = "rikyu_mcp.doctor:main"

[tool.setuptools.packages.find]
include = ["rikyu_mcp*"]

[tool.setuptools.package-data]
rikyu_mcp = [
    "data/*.json",
    "data/docs_index/*",
]
